src/components/AboutMe.module.css
.timeline {
  border-left: 1px solid hsl(0, 0%, 90%);
  position: relative;
  list-style: none;
  padding-top: 2rem;
}

.item {
  position: relative;
  background-color: #21252b;
  outline: solid 1px white;
  border-radius: 0.5rem;
  padding: 1rem;
}

.item:after {
  position: absolute;
  display: block;
  top: 0;
}

.item:after {
  background-color: hsl(0, 0%, 90%);
  left: -38px;
  border-radius: 50%;
  height: 11px;
  width: 11px;
  content: "";
}

.icon {
  height: 4rem;
  vertical-align: middle;
  margin-right: 1rem;
}

